old_results/rust/multi_level/lpr_1/rust-112213/iteration_2/operation_complex_data_type/perses/perses_log.txt
[03:04:40] [INFO   ] The command-line options are: "--alg": "perses_node_priority_with_dfs_delta", "--append-to-progress-dump-file": "false", "--call-creduce": "false", "--call-formatter": "false", "--creduce-cmd": "creduce", "--edit-caching": "true", "--enable-lightweight-refreshing": "false", "--enable-line-slicer": "false", "--enable-token-slicer": "false", "--enable-tree-slicer": "false", "--enable-vulcan": "false", "--fixpoint": "true", "--format-cmd": "", "--help, -h": "false", "--input-file, --input, -i": "/tmp/gpt_reduction/results/894c03c/scripts_run_gpt_reduction_py_benchmark_suite_tmp_gpt_reduction_benchmark_suites_rust_perses_results_rename_id_1/rust-112213/iteration_2/operation_complex_data_type/perses/small.rs", "--lang": "auto", "--language-ext-jars": "[]", "--list-algs": "false", "--list-langs": "false", "--list-verbosity-levels": "false", "--max-bfs-depth-for-regular-rule-node": "5", "--max-edit-count-for-regular-rule-node": "100", "--non-deletion-iteration-limit": "10", "--output-dir, -o": "/tmp/gpt_reduction/results/894c03c/scripts_run_gpt_reduction_py_benchmark_suite_tmp_gpt_reduction_benchmark_suites_rust_perses_results_rename_id_1/rust-112213/iteration_2/operation_complex_data_type/perses", "--pass-level-caching": "false", "--profile": "false", "--query-cache-refresh-threshold": "0", "--query-cache-type": "COMPACT_QUERY_CACHE", "--query-caching": "FALSE", "--reparse-each-iteration": "true", "--script-execution-keep-waiting-after-timeout": "true", "--script-execution-timeout-in-seconds": "600", "--stop-at-first-compatible-child-for-regular-rule-node": "false", "--test-script, --test, -t": "/tmp/gpt_reduction/results/894c03c/scripts_run_gpt_reduction_py_benchmark_suite_tmp_gpt_reduction_benchmark_suites_rust_perses_results_rename_id_1/rust-112213/iteration_2/operation_complex_data_type/perses/r.sh", "--threads": "1", "--use-optc-parser": "false", "--use-real-ddmin": "false", "--verbosity": "INFO", "--version": "false", "--vulcan-fixpoint": "false", "--window-size": "4" 
[03:04:41] [INFO   ] Tree Building: Start building spar-tree from input file SourceFile{file=FileWithContent{file=/tmp/gpt_reduction/results/894c03c/scripts_run_gpt_reduction_py_benchmark_suite_tmp_gpt_reduction_benchmark_suites_rust_perses_results_rename_id_1/rust-112213/iteration_2/operation_complex_data_type/perses/small.rs}, lang=LanguageRust{name=rust, extensions=[rs], defaultCodeFormatControl=COMPACT_ORIG_FORMAT}} 
[03:04:41] [INFO   ] Tree Building: Step 1: Antlr parsing. 
[03:04:42] [INFO   ] Tree Building: Step 2: Converting parse tree to spar-tree 
[03:04:42] [INFO   ] Tree Building: Step 3: Simplifying spar-tree 
[03:04:42] [INFO   ] Tree Building: Finished in TimeSpan{startMillis=1701572681488, endMillis=1701572682693, formatted=1 second} 
[03:04:42] [INFO   ] The reduction process started at 03:04:42 2023/12/03 
[03:04:42] [INFO   ] Cache setting: query-caching=disabled, edit-caching=enabled, query-cache=compact_query_cache 
[03:04:42] [INFO   ] The initial sanity check failed. 
[03:04:42] [INFO   ] Checking whether the script is flaky. #trials=5 
Exception in thread "main" java.lang.IllegalStateException: The initial sanity check failed. 

***** ***** ***** ***** ***** ***** ***** ***** ***** ***** ***** ***** *****
*
* The script exit code is ExitCode(intValue=1) 
* The files have been saved, and you can check them at:
*     /tmp/perses_failure_3636976117899340700
* The property test is not flaky. #total runs: 6, #interesting: 0, #uninteresting: 6
***** ***** ***** ***** ***** ***** ***** ***** ***** ***** ***** ***** *****

============= stderr =============
error[E0425]: cannot find value `ae0` in this scope
--> small.rs:81:9
|
81 |         ae0.hash(&mut a);
|         ^^^ help: a local variable with a similar name exists: `ae2`

error[E0308]: mismatched types
--> small.rs:19:7
|
19 |     o(&mut ab, af, i, af, af, j, n);
|     - ^^^^^^^ expected `[isize; 2]`, found `&mut [{integer}; 2]`
|     |
|     arguments to this function are incorrect
|
note: function defined here
--> small.rs:25:4
|
25 | fn o(
|    ^
26 |     z: [isize; 2],
|     -------------
help: consider removing the borrow
|
19 -     o(&mut ab, af, i, af, af, j, n);
19 +     o(ab, af, i, af, af, j, n);
|

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0425.
For more information about an error, try `rustc --explain E0308`.


============= stdout =============
<empty> 

	at org.perses.reduction.AbstractReductionDriver.sanityCheck(AbstractReductionDriver.kt:93)
	at org.perses.reduction.AbstractProgramReductionDriver.reduce(AbstractProgramReductionDriver.kt:188)
	at org.perses.AbstractMain.internalRun(AbstractMain.kt:41)
	at org.perses.util.cmd.AbstractMain.run(AbstractMain.kt:53)
	at org.perses.Main$Companion.main(Main.kt:68)
	at org.perses.Main.main(Main.kt)
